--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="line"></div>
     </div>
 </div>
-
+<div class="foo">
+    <div class="bar"></div>
+</div>
 
 </body>
 </html>
